[package]
name = "h_analyzer_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = [
    "prost",
] }

[dependencies]
tonic = { version = "0.10.2", default-features = false, features = [
    "codegen",
    "prost",
] }
prost = "0.12.1"
serde = { version = "1", features = ["derive"] }
